#1507: Added CommandSecurityDefinitions